<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#f2f2f2"
    app:cardCornerRadius="10dp"
    app:cardElevation="18dp"
    android:layout_margin="16dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ultra"
            android:lineSpacingExtra="47.5sp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:text="@string/logout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/light"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="#0e251b"
            android:padding="8dp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:text="@string/logout_msg_address" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
            android:background="#4a3c3c43"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/view"
            >
            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/regular"
                android:textColor="@color/deep_blue"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4a3c3c43"
                />
            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/deep_blue"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>