<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#f2f2f2"
    app:cardCornerRadius="10dp"
    app:cardElevation="18dp"
    android:layout_margin="16dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm_replace"
            android:textSize="16.5sp"
            android:textColor="@color/almost_black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12.5dp"
            android:fontFamily="@font/ultra"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/light"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textColor="#0e251b"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:text="@string/replace_points_money" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
            android:background="#4a3c3c43"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:layoutDirection="locale"
            app:layout_constraintTop_toBottomOf="@+id/view"
            >
            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:text="@string/cancel_order"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/sep"
                app:layout_constraintEnd_toEndOf="parent"

                android:gravity="center"
                android:fontFamily="@font/regular"
                android:textColor="#8cc63f"
                />
            <View
                android:id="@+id/sep"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="#4a3c3c43"
                />
            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@id/sep"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/exchange"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/regular"
                android:textColor="#8cc63f"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
